--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ include_directories(${common_SOURCE_DIR}/include)
 include_directories(${passport_SOURCE_DIR}/include)
 include_directories(${private_SOURCE_DIR}/include)
 include_directories(${routing_SOURCE_DIR}/include)
+include_directories(${rudp_SOURCE_DIR}/include)
 
 
 ###################################################################################################
