--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,30 +36,31 @@ include_directories(${routing_SOURCE_DIR}/include)
 #==================================================================================================#
 # Set up all files as GLOBs                                                                        #
 #==================================================================================================#
-set(OutputFile ${PROJECT_SOURCE_DIR}/include/maidsafe/nfs/message_wrapper_variant.h)
-set(InputFile ${PROJECT_SOURCE_DIR}/cmake/message_wrapper_variant.h.in)
-set(TypesH ${PROJECT_SOURCE_DIR}/include/maidsafe/nfs/types.h)
+set(OutputFile ${PROJECT_SOURCE_DIR}/include/maidsafe/nfs/message_types.h)
+set(InputFile ${PROJECT_SOURCE_DIR}/cmake/message_types.h.in)
+set(MessageTypes ${PROJECT_SOURCE_DIR}/cmake/message_types.cmake)
 # An apparent bug in CMake means that file(READ...) can only be done from within
-# CMAKE_CURRENT_BINARY_DIR.  Hence types.h is copied here to allow configure.cmake to work.
-add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/types.h
-                   COMMAND ${CMAKE_COMMAND} -E copy_if_different ${TypesH} ${CMAKE_CURRENT_BINARY_DIR}/types.h
-                   DEPENDS ${TypesH}
-                   COMMENT "Copying types.h to ${CMAKE_CURRENT_BINARY_DIR}")
+# CMAKE_CURRENT_BINARY_DIR.  Hence message_types.cmake is copied here to allow configure.cmake to work.
+add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/message_types.cmake
+                   COMMAND ${CMAKE_COMMAND} -E copy_if_different ${MessageTypes} ${CMAKE_CURRENT_BINARY_DIR}/message_types.cmake
+                   DEPENDS ${MessageTypes}
+                   COMMENT "Copying message_types.cmake to ${CMAKE_CURRENT_BINARY_DIR}")
 set(CMAKE_DISABLE_SOURCE_CHANGES OFF)
 add_custom_command(OUTPUT ${OutputFile}
                    COMMAND ${CMAKE_COMMAND} -DOutputFile="${OutputFile}"
                                             -DInputFile="${InputFile}"
                                             -P ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/types.h
+                   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/message_types.cmake
                            ${InputFile}
                            ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                   COMMENT "Configuring message_wrapper_variant.h")
+                   COMMENT "Configuring message_types.h")
 set(CMAKE_DISABLE_SOURCE_CHANGES ON)
 set_source_files_properties(${OutputFile} PROPERTIES GENERATED TRUE)
 source_group("Nfs API Files" FILES ${OutputFile})
 source_group("Nfs CMake Files" FILES ${CMAKE_CURRENT_LIST_FILE}
                                      ${InputFile}
-                                     ${PROJECT_SOURCE_DIR}/cmake/configure.cmake)
+                                     ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
+                                     ${PROJECT_SOURCE_DIR}/cmake/message_types.cmake)
 
 glob_dir(Nfs ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs Nfs)
 glob_dir(NfsTests ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs/tests Tests)
@@ -68,7 +69,9 @@ glob_dir(NfsTests ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs/tests Tests)
 #==================================================================================================#
 # Define MaidSafe libraries and executables                                                        #
 #==================================================================================================#
-ms_add_static_library(nfs ${NfsAllFiles} ${OutputFile} ${InputFile} ${PROJECT_SOURCE_DIR}/cmake/configure.cmake)
+ms_add_static_library(nfs ${NfsAllFiles} ${OutputFile} ${InputFile}
+                      ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
+                      ${PROJECT_SOURCE_DIR}/cmake/message_types.cmake)
 target_link_libraries(maidsafe_nfs maidsafe_routing)
 
 if(MaidsafeTesting)
