Moved handling of auto-generation of message code from meta files to super-project.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,60 +38,20 @@ include_directories(${routing_SOURCE_DIR}/include)
 #==================================================================================================#
 set(OutputFile ${PROJECT_SOURCE_DIR}/include/maidsafe/nfs/message_types.h)
 set(InputFile ${PROJECT_SOURCE_DIR}/cmake/message_types.h.in)
-set(IntermediateDir "${CMAKE_CURRENT_BINARY_DIR}/copied_message_types")
-
-# An apparent bug in CMake means that file(READ...) can only be done from within
-# CMAKE_CURRENT_BINARY_DIR.  Hence message_types.meta files are copied here to allow configure.cmake to work.
 file(GLOB_RECURSE MetaFiles "${CMAKE_CURRENT_SOURCE_DIR}/cmake/*.message_types.meta")
-foreach(MetaFile ${MetaFiles})
-  string(REPLACE "${CMAKE_CURRENT_SOURCE_DIR}/cmake/" "" RelativeMetaFile "${MetaFile}")
-  set(IntermediateOutputFile "${IntermediateDir}/${RelativeMetaFile}")
-  get_filename_component(FilePath "${IntermediateOutputFile}" PATH)
-  list(APPEND IntermediateOutputFiles "${IntermediateOutputFile}")
-  execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory "${FilePath}")
-  add_custom_command(OUTPUT "${IntermediateOutputFile}"
-                     COMMAND ${CMAKE_COMMAND} -E copy_if_different "${MetaFile}" "${IntermediateOutputFile}"
-                     DEPENDS "${MetaFile}"
-                     COMMENT "Copying ${RelativeMetaFile} to ${IntermediateDir}/")
-endforeach()
+set_meta_files_custom_commands("${OutputFile}" "${InputFile}" "${MetaFiles}" "Nfs API Files" "Nfs CMake Files")
 
-# Grab the list of files currently in the binary dir and remove any which are no longer required
-file(GLOB_RECURSE ExtraMetaFiles "${IntermediateDir}/*.message_types.meta")
-list(REMOVE_ITEM ExtraMetaFiles ${IntermediateOutputFiles})
-foreach(ExtraMetaFile ${ExtraMetaFiles})
-  execute_process(COMMAND ${CMAKE_COMMAND} -E remove "${ExtraMetaFile}")
-  message(STATUS "Removed \"${ExtraMetaFile}\"")
-endforeach()
-
-set(CMAKE_DISABLE_SOURCE_CHANGES OFF)
-add_custom_command(OUTPUT ${OutputFile}
-                   COMMAND ${CMAKE_COMMAND} -DOutputFile="${OutputFile}"
-                                            -DInputFile="${InputFile}"
-                                            -P ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                   DEPENDS ${IntermediateOutputFiles}
-                           ${InputFile}
-                           ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                   COMMENT "Configuring message_types.h")
-set(CMAKE_DISABLE_SOURCE_CHANGES ON)
-set_source_files_properties(${OutputFile} PROPERTIES GENERATED TRUE)
-source_group("Nfs API Files" FILES ${OutputFile})
-source_group("Nfs CMake Files" FILES ${CMAKE_CURRENT_LIST_FILE}
-                                     ${InputFile}
-                                     ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                                     ${MetaFiles})
-
-glob_dir(Nfs ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs Nfs)
-glob_dir(NfsClient ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs/client "Nfs Client")
-glob_dir(NfsVault ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs/vault "Nfs Vault")
-glob_dir(NfsTests ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs/tests Tests)
+set(NfsSourcesDir ${PROJECT_SOURCE_DIR}/src/maidsafe/nfs)
+glob_dir(Nfs ${NfsSourcesDir} Nfs)
+glob_dir(NfsClient ${NfsSourcesDir}/client "Nfs Client")
+glob_dir(NfsVault ${NfsSourcesDir}/vault "Nfs Vault")
+glob_dir(NfsTests ${NfsSourcesDir}/tests Tests)
 
 
 #==================================================================================================#
 # Define MaidSafe libraries and executables                                                        #
 #==================================================================================================#
-ms_add_static_library(nfs_core ${NfsAllFiles} ${OutputFile} ${InputFile}
-                      ${PROJECT_SOURCE_DIR}/cmake/configure.cmake
-                      ${MetaFiles})
+ms_add_static_library(nfs_core ${NfsAllFiles} ${OutputFile} ${InputFile} ${MetaFiles})
 ms_add_static_library(nfs_client ${NfsClientAllFiles})
 ms_add_static_library(nfs_vault ${NfsVaultAllFiles})
 target_link_libraries(maidsafe_nfs_core maidsafe_routing)
