--- a/cmake/message_types.h.in
+++ b/cmake/message_types.h.in
@@ -33,6 +33,8 @@
 
 #include "maidsafe/common/error.h"
 
+#include "maidsafe/nfs/client/messages.h"
+#include "maidsafe/nfs/vault/messages.h"
 
 // Auto-generated forward declarations.
 // Modify in nfs/cmake/*.message_types.meta if required, not here.
