remove catch requirement

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,6 @@ ms_glob_dir(Nfs ${NfsSourcesDir} Nfs)
 ms_glob_dir(NfsClient ${NfsSourcesDir}/client "Nfs Client")
 ms_glob_dir(NfsVault ${NfsSourcesDir}/vault "Nfs Vault")
 ms_glob_dir(NfsTests ${NfsSourcesDir}/tests Tests)
-list(REMOVE_ITEM NfsTestsAllFiles ${NfsSourcesDir}/tests/fake_store_test.cc ${NfsSourcesDir}/tests/fake_store.cc)
 
 #==================================================================================================#
 # Define MaidSafe libraries and executables                                                        #
@@ -69,10 +68,6 @@ if(MaidsafeTesting)
   target_link_libraries(TESTnfs maidsafe_nfs_core maidsafe_nfs_client maidsafe_nfs_vault maidsafe_test)
   # TODO - Investigate why boost variant requires this warning to be disabled.
   target_compile_options(TESTnfs PRIVATE $<$<AND:$<BOOL:${MSVC}>,$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>>:/wd4702>)
-
-  ms_add_executable(test_nfs "Tests/NFS" ${NfsSourcesDir}/tests/fake_store_test.cc
-                                         ${NfsSourcesDir}/tests/tests_main.cc)
-  target_link_libraries(test_nfs maidsafe_nfs_client maidsafe_test)
 endif()
 
 ms_rename_outdated_built_exes()
@@ -90,7 +85,6 @@ include(standard_flags)
 if(MaidsafeTesting)
   ms_add_style_test()
   ms_add_gtests(TESTnfs)
-  ms_add_catch_tests(test_nfs)
   ms_add_project_experimental()
   ms_test_summary_output()
 endif()
@@ -103,6 +97,6 @@ install(TARGETS maidsafe_nfs_core maidsafe_nfs_client maidsafe_nfs_vault COMPONE
 install(DIRECTORY ${PROJECT_SOURCE_DIR}/include/ COMPONENT Development DESTINATION include)
 
 if(MaidsafeTesting)
-  install(TARGETS TESTnfs test_nfs COMPONENT Tests CONFIGURATIONS Debug RUNTIME DESTINATION bin/debug)
-  install(TARGETS TESTnfs test_nfs COMPONENT Tests CONFIGURATIONS Release RUNTIME DESTINATION bin)
+  install(TARGETS TESTnfs COMPONENT Tests CONFIGURATIONS Debug RUNTIME DESTINATION bin/debug)
+  install(TARGETS TESTnfs COMPONENT Tests CONFIGURATIONS Release RUNTIME DESTINATION bin)
 endif()
