--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,14 +64,14 @@ target_link_libraries(maidsafe_nfs_client maidsafe_nfs_vault maidsafe_nfs_core)
 target_link_libraries(maidsafe_nfs_vault maidsafe_nfs_client maidsafe_nfs_core)
 
 if(MaidsafeTesting)
-  list(REMOVE_ITEM NfsTestsAllFiles ${NfsSourcesDir}/tests/client_test.cc)
+  list(REMOVE_ITEM NfsTestsAllFiles ${NfsSourcesDir}/tests/maid_node_nfs_test.cc)
   ms_add_executable(TESTnfs "Tests/NFS" ${NfsTestsAllFiles})
   target_link_libraries(TESTnfs maidsafe_nfs_core maidsafe_nfs_client maidsafe_nfs_vault maidsafe_test)
   # TODO - Investigate why boost variant requires this warning to be disabled.
   target_compile_options(TESTnfs PRIVATE $<$<AND:$<BOOL:${MSVC}>,$<OR:$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>>:/wd4702>)
 
   set(NfsFunctionalTestFiles ${NfsSourcesDir}/tests/tests_main.cc
-                             ${NfsSourcesDir}/tests/client_test.cc)
+                             ${NfsSourcesDir}/tests/maid_node_nfs_test.cc)
   ms_add_executable(TESTnfs_func "Tests/NFS" ${NfsFunctionalTestFiles})
   target_link_libraries(TESTnfs_func maidsafe_nfs_core maidsafe_nfs_client maidsafe_nfs_vault maidsafe_test)
   # TODO - Investigate why boost variant requires this warning to be disabled.
