not to include TESTnfs_func in experimental as it requires an external vaults network

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,8 @@ include(standard_flags)
 if(MaidsafeTesting)
   ms_add_style_test()
   ms_add_gtests(TESTnfs)
-  add_test(NAME Nfs_Functional_Tests COMMAND TESTnfs_func)
-  set_property(TEST Nfs_Functional_Tests PROPERTY LABELS Nfs Functional)
+#   add_test(NAME Nfs_Functional_Tests COMMAND TESTnfs_func)
+#   set_property(TEST Nfs_Functional_Tests PROPERTY LABELS Nfs Functional)
   ms_add_project_experimental()
   ms_test_summary_output()
 endif()
