include TESTnfs_func in weekly experimental

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,12 @@ include(standard_flags)
 if(MaidsafeTesting)
   ms_add_default_tests()
   ms_add_gtests(TESTnfs)
+  if(WEEKLY)
 #   add_test(NAME Nfs_Functional_Tests COMMAND TESTnfs_func)
 #   set_property(TEST Nfs_Functional_Tests PROPERTY LABELS Nfs Functional)
+    ms_add_gtests(TESTnfs_func)
+    set_property(TEST MaidNodeNfsTest.FUNC_PopulateLengthyTree PROPERTY TIMEOUT 5000)
+  endif()
   ms_test_summary_output()
 endif()
 
